# Android-Control-Agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.yaml  deploy.sh  docker-compose.cloud.yml  docker-compose.yml  pyproject.toml  tiktok-action.md
.agents/: RULES.md
.agents/skills/ai-brain/: SKILL.md
.agents/skills/facebook-agent/: SKILL.md
.agents/skills/google-agent/: SKILL.md
.agents/skills/instagram-agent/: SKILL.md
.agents/workflows/: multi-agent.md  plan-management.md  ui-update.md
android-helper/: settings.gradle
android-helper/app/: build.gradle  proguard-rules.pro
android_control.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
app/: __init__.py  config.py  database.py  main.py  models.py
app/routers/: device_ws.py  devices.py  schedules.py  tasks.py  ws.py
app/services/: accessibility_backend.py  adb_agent.py  adb_backend.py  backend_manager.py  behavior.py  cloud_backend.py  connection_watchdog.py  device_backend.py  device_hub.py  device_manager.py  scheduler.py  script_runner.py  task_engine.py  task_queue.py  template_manager.py  tiktok_controller.py
app/static/: app.js  index.html  style.css
app/templates/: facebook_scroll.md  general.md  tiktok_browse.md  tiktok_comment.md  tiktok_edit_profile.md  tiktok_follow.md  tiktok_like.md  tiktok_upload.md  tiktok_warmup.md  youtube_watch.md
deploy/: cloud-setup.sh
design-system/android-control-saas/: MASTER.md
docs/plans/: _index.md  cloud-device-integration.md  saas_website_plan.md
tests/: test_cloud_ws.py  test_phase3.py
(+21 files in other folders)
